name:                haskball
version:             0.1.0.0
synopsis:            Processing some csv data
description:         Baseball data analysis
license:             BSD3
license-file:        LICENSE
author:              Aristides Staffieri
maintainer:          aristides@aristidesstaffieri.com
copyright:           2016, Aristides Staffieri
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable bassbull
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && <5,
                       bytestring,
                       vector,
                       cassava
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base,
                       bassbull,
                       hspec >= 2.0 && < 2.1
  default-language:    Haskell2010
